--- a/components/nft-image/NFTImage.module.scss
+++ b/components/nft-image/NFTImage.module.scss
@@ -4,14 +4,20 @@
   background-color: $dark-grey;
   padding: 0;
   position: relative;
-
+  max-height: 650px;
   img {
     max-width: 100%;
   }
 
   iframe {
-    width: 80%;
+    width: 100%;
     height: 650px;
+  }
+
+  @media only screen and (max-width: 1200px) {
+    iframe {
+      height: 350px;
+    }
   }
 
   video {
