--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -12,6 +12,7 @@ $font-smallest: 11px;
 // COLORS
 $lightest-grey: rgb(154, 154, 154);
 $lighter-grey: rgb(68, 68, 68);
+$light-grey: rgb(40, 40, 40);
 $almost-very-dark-grey: rgb(30, 30, 30);
 $very-dark-grey: rgb(34, 34, 34);
 $dark-grey: rgb(51, 51, 51);
